--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -202,11 +202,12 @@ input::-webkit-inner-spin-button {
 }
 
 .building_name {
+  cursor: default;
   width: 100%;
   height: 20%;
   color: #daa548;
   font-family: FUTURE, sans-serif;
-  background-color: rgba(15, 65, 140, 0.5);
+  background: radial-gradient(ellipse 90% 90%, rgba(5, 45, 51, 0.5), rgba(5, 45, 51, 0.2)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -214,7 +215,7 @@ input::-webkit-inner-spin-button {
 }
 
 .building_picture {
-  height: 55%;
+  height: 58%;
   width: 100%;
 }
 .building_picture img {
@@ -225,9 +226,9 @@ input::-webkit-inner-spin-button {
 .building_controls {
   display: flex;
   flex-direction: column;
-  gap: 5px;
   width: 100%;
-  height: 25%;
+  height: 22%;
+  justify-content: space-between;
 }
 
 .building_card_btn {
@@ -451,9 +452,15 @@ input::-webkit-inner-spin-button {
 }
 
 .help_container {
+  padding: 0 5px;
+  height: 30px;
   position: absolute;
   right: 0;
   bottom: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 10px);
 }
 
 .red {
@@ -471,6 +478,7 @@ input::-webkit-inner-spin-button {
   gap: 20px;
   color: #00E000;
   width: 500px;
+  z-index: 999999;
 }
 
 .building_info_description {
@@ -516,7 +524,8 @@ input::-webkit-inner-spin-button {
   border: 1px solid rgba(43, 211, 237, 0.6);
   text-align: center;
 }
-.building_info_item button {
+
+.sp_button {
   position: absolute;
   right: 0;
   padding: 0 4px;
@@ -526,12 +535,38 @@ input::-webkit-inner-spin-button {
   box-shadow: inset 0 0 2px 1px rgba(43, 211, 237, 0.25);
   background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 100%) no-repeat border-box;
 }
-.building_info_item button:hover {
+.sp_button:hover {
   background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 10%) no-repeat border-box;
   color: #19b6e5;
 }
-.building_info_item button:active {
+.sp_button:active {
   color: #daa548;
+}
+
+.sp_button_relative {
+  position: relative;
+  padding: 0 4px;
+  border: 1px solid rgba(43, 211, 237, 0.6);
+  color: #73d6e5;
+  text-shadow: 0 0 5px rgba(115, 214, 229, 0.5);
+  box-shadow: inset 0 0 2px 1px rgba(43, 211, 237, 0.25);
+  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 100%) no-repeat border-box;
+}
+.sp_button_relative:hover {
+  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 10%) no-repeat border-box;
+  color: #19b6e5;
+}
+.sp_button_relative:active {
+  color: #daa548;
+}
+
+.close_button {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  width: 20px;
+  height: 20px;
+  background: radial-gradient(ellipse 90% 90%, rgba(0, 0, 0, 0.35), rgb(0, 0, 0)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
 }
 
 .building_info_title {
