--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -1,6 +1,8 @@
 $sp_green:  #00E000 !global;
 $sp_yellow:  #daa548 !global;
-$sp_border: 1px solid rgba(43,211,237,0.6);
+$sp_border: 1px solid rgba(43,211,237,0.6) !global;
+$sp_bg: radial-gradient(ellipse 90% 90%, rgba(0,0,0,0.35), rgba(0,0,0,1.0)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
+$sp_bg2: linear-gradient(to right, rgba(4,34,38,0.5), rgba(5,45,51,0.5) 50% ,rgba(4,34,38,0.5) 100%) no-repeat border-box;
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -206,18 +208,20 @@ input::-webkit-inner-spin-button {
   border: 1px solid white;
 }
 .building_name{
+  cursor: default;
   width: 100%;
   height: 20%;
   color: #daa548;
   font-family: FUTURE, sans-serif;
-  background-color: rgba(15, 65, 140, .5);
+  //background-color: rgba(15, 65, 140, .5);
+  background: radial-gradient(ellipse 90% 90%,rgba(5,45,51,0.5), rgba(5,45,51,0.2)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
 }
 .building_picture{
-  height: 55%;
+  height: 58%;
   width: 100%;
   & img{
     width: 100%;
@@ -227,9 +231,10 @@ input::-webkit-inner-spin-button {
 .building_controls{
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  //gap: 5px;
   width: 100%;
-  height: 25%;
+  height: 22%;
+  justify-content: space-between;
 }
 .building_card_btn{
   height: 30px;
@@ -442,9 +447,15 @@ input::-webkit-inner-spin-button {
 }
 
 .help_container{
+  padding: 0 5px;
+  height: 30px;
   position: absolute;
   right: 0;
   bottom: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 10px);
 }
 
 
@@ -466,6 +477,7 @@ input::-webkit-inner-spin-button {
   gap: 20px;
   color: $sp_green;
   width: 500px;
+  z-index: 999999;
 }
 .building_info_description{
   color: $sp_yellow;
@@ -512,23 +524,66 @@ input::-webkit-inner-spin-button {
     border: $sp_border;
     text-align: center;
   }
-  & button{
-    position: absolute;
-    right: 0;
-    padding: 0 4px;
-    border: $sp_border;
-    color: #73d6e5;
-    text-shadow: 0 0 5px rgba(115,214,229,0.5);
-    box-shadow: inset 0 0 2px 1px rgba(43,211,237,0.25);
-    background: linear-gradient(to top, rgba(43,211,237,0.15), rgba(43,211,237,0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9,13,15,0.9), rgba(9,13,15,0.9) 100%) no-repeat border-box;
-    &:hover{
-      background: linear-gradient(to top, rgba(43,211,237,0.15), rgba(43,211,237,0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9,13,15,0.9), rgba(9,13,15,0.9) 10%) no-repeat border-box;
-      color: #19b6e5;
-    }
-    &:active{
-      color: $sp_yellow;
-    }
+  //& button{
+  //  position: absolute;
+  //  right: 0;
+  //  padding: 0 4px;
+  //  border: $sp_border;
+  //  color: #73d6e5;
+  //  text-shadow: 0 0 5px rgba(115,214,229,0.5);
+  //  box-shadow: inset 0 0 2px 1px rgba(43,211,237,0.25);
+  //  background: linear-gradient(to top, rgba(43,211,237,0.15), rgba(43,211,237,0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9,13,15,0.9), rgba(9,13,15,0.9) 100%) no-repeat border-box;
+  //  &:hover{
+  //    background: linear-gradient(to top, rgba(43,211,237,0.15), rgba(43,211,237,0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9,13,15,0.9), rgba(9,13,15,0.9) 10%) no-repeat border-box;
+  //    color: #19b6e5;
+  //  }
+  //  &:active{
+  //    color: $sp_yellow;
+  //  }
+  //}
+}
+
+.sp_button{
+  position: absolute;
+  right: 0;
+  padding: 0 4px;
+  border: $sp_border;
+  color: #73d6e5;
+  text-shadow: 0 0 5px rgba(115, 214, 229, 0.5);
+  box-shadow: inset 0 0 2px 1px rgba(43, 211, 237, 0.25);
+  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 100%) no-repeat border-box;
+  &:hover {
+    background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 10%) no-repeat border-box;
+    color: #19b6e5;
   }
+  &:active {
+    color: $sp_yellow;
+  }
+}
+.sp_button_relative{
+  position: relative;
+  padding: 0 4px;
+  border: $sp_border;
+  color: #73d6e5;
+  text-shadow: 0 0 5px rgba(115, 214, 229, 0.5);
+  box-shadow: inset 0 0 2px 1px rgba(43, 211, 237, 0.25);
+  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 100%) no-repeat border-box;
+  &:hover {
+    background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 10%) no-repeat border-box;
+    color: #19b6e5;
+  }
+  &:active {
+    color: $sp_yellow;
+  }
+}
+
+.close_button{
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  width: 20px;
+  height: 20px;
+  background: $sp_bg;
 }
 
 .building_info_title{
