--- a/src/css/tradeStyles.scss
+++ b/src/css/tradeStyles.scss
@@ -1,4 +1,5 @@
-
+$sp_border: 1px solid rgba(43,211,237,0.6) !global;
+$sp_bg: radial-gradient(ellipse 90% 90%, rgba(0,0,0,0.35), rgba(0,0,0,1.0)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
 .top_nav_money{
   display: flex;
   gap: 5px;
@@ -6,27 +7,29 @@
 
 .colored{
   border-radius: 50%;
-  border: 1px solid  #00E000;
-  padding: 2px 4px;
-  background-color: white;
+  border: $sp_border;
+  padding: 2px;
+  background: linear-gradient(to right, rgba(4,34,38,0.5), rgba(5,45,51,0.5) 50% ,rgba(4,34,38,0.5) 100%) no-repeat border-box;
 }
 .top_nav_money_icon{
-  padding: 3px 6px;
+  height: 25px;
   border-radius: 6px;
-  border: 1px solid rgba(0, 0, 0, 0);
   cursor: pointer;
   & img{
     width: 20px;
+    background: $sp_bg;
     &.small{
       width: 10px;
+      padding: 4px 7px;
+      background: $sp_bg;
     }
   }
   &:hover{
-    border-left: 1px solid yellow;
-    border-right: 1px solid yellow;
+    transform: scale(1.1);
+    //border: $sp_border;
   }
   &:active{
-    transform: scale(1.1);
+    transform: scale(.9);
   }
 }
 
