--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -470,13 +470,9 @@ input::-webkit-inner-spin-button {
 
 .building_info_wrapper {
   border: 1px solid rgba(43, 211, 237, 0.6);
-  background: radial-gradient(ellipse 90% 90%, rgba(0, 0, 0, 0.35), rgb(0, 0, 0)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
+  background: radial-gradient(ellipse 90% 90%, rgba(0, 0, 0, 0.35), rgb(0, 0, 0)) no-repeat, url(@/assets/images/value_bg_blue.png) repeat padding-box;
   position: fixed;
-  top: 170px;
-  left: 50%;
-  transform: translate(-50%, 0);
   display: flex;
-  gap: 20px;
   color: #00E000;
   width: 700px;
   z-index: 999999;
