--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -469,13 +469,13 @@ input::-webkit-inner-spin-button {
 
 .building_info_wrapper {
   border: $sp_border;
-  background: radial-gradient(ellipse 90% 90%, rgba(0,0,0,0.35), rgba(0,0,0,1.0)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
+  background: radial-gradient(ellipse 90% 90%, rgba(0,0,0,0.35), rgba(0,0,0,1.0)) no-repeat, url(@/assets/images/value_bg_blue.png) repeat padding-box;
   position: fixed;
-  top: 170px;
-  left: 50%;
-  transform: translate(-50%, 0);
+  //top: 170px;
+  //left: 50%;
+  //transform: translate(-50%, 0);
   display: flex;
-  gap: 20px;
+  //gap: 20px;
   color: $sp_green;
   width: 700px;
   z-index: 999999;
