--- a/src/css/globalStyles.css
+++ b/src/css/globalStyles.css
@@ -1,3 +1,38 @@
+.btn_default {
+  color: #daa548;
+  width: 100%;
+  border: 1px solid rgb(43, 211, 237);
+  cursor: pointer;
+  background: radial-gradient(ellipse 90% 90%, rgb(5, 45, 51), rgb(5, 45, 51)) no-repeat, repeat padding-box;
+}
+.btn_default:hover {
+  background: radial-gradient(ellipse 90% 90%, rgb(5, 45, 51), rgb(5, 15, 51)) no-repeat, repeat padding-box;
+}
+.btn_default:active {
+  background: radial-gradient(ellipse 90% 90%, rgb(5, 45, 51), rgb(5, 35, 51)) no-repeat, repeat padding-box;
+}
+
+.ship_card {
+  position: relative;
+  width: 100px;
+  height: 163px;
+  border: 1px solid rgb(43, 211, 237);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.ship_card-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 10px;
+  text-align: center;
+  cursor: default;
+  border-bottom: 0;
+  margin-top: -7px;
+  padding: 0 2px;
+}
+
 @font-face {
   font-family: "FUTURE";
   src: url("fonts/FUTURE.woff") format("woff");
